tests/language_modules/04_types/invalid_semantics/integer_fractional_range.vf
module IntegerFractionalRange

type Count is Integer range 0.5..10.5

end IntegerFractionalRange